<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/emergency"
        android:icon="@drawable/ic_baseline_contactless_24"
        android:title="@string/emergency_number" />

    <item
        android:id="@+id/domestic"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/violence_harassment" />

    <item
        android:id="@+id/homeNav"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/repcomplain"
        android:icon="@drawable/ic_baseline_transfer_within_a_station_24"
        android:title="@string/report_Complain" />

    <item
        android:id="@+id/userProfile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/my_profile" />

</menu>