<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".PoliceLoginActivity">

    <EditText
        android:id="@+id/user_police"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/betteredittext"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="18dp" />

    <EditText
        android:background="@drawable/betteredittext"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        android:id="@+id/password_police"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:ems="10"
        android:textSize="18dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/signIn_police"
        android:background="@drawable/rounded_corners"
        android:textSize="15dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/sign_in"/>
</LinearLayout>