<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.ez4us.shieldapp.ProfileActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:layout_marginBottom="10dp"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
        <ImageView

            android:id="@+id/user_imageview"
            android:layout_width="125dp"
            android:layout_gravity="center"
            android:layout_height="125dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:layout_centerHorizontal="true"/>



    </LinearLayout>

        <TextView
            android:id="@+id/uniqueid_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/unique_id"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/later_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unique_id"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twitter_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_date_range_24" />

            <TextView
                android:id="@+id/link_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_call_24" />

            <TextView
                android:id="@+id/phone_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/video_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_work_24" />

            <TextView
                android:id="@+id/occupation_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_imageview"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/work_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/workplace"
                android:textSize="18sp" />

        </LinearLayout>



        <Button
            android:textSize="15sp"
            android:id="@+id/edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            android:text="@string/edit_profile"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="40dp"

            android:textAllCaps="false"
            android:background="@drawable/rounded_corners"
            android:text="@string/sign_out"
            android:textColor="#fff"
            android:textSize="15sp" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bottomNav"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>